regression-tests/test-results/gcc-10/pure2-expected-is-as.cpp.output
pure2-expected-is-as.cpp2: In function ‘int main()’:
pure2-expected-is-as.cpp2:7:10: error: ‘expected’ is not a member of ‘std’; did you mean ‘unexpected’?
pure2-expected-is-as.cpp2:7:19: error: expected primary-expression before ‘int’
pure2-expected-is-as.cpp2:8:10: error: ‘expected’ is not a member of ‘std’; did you mean ‘unexpected’?
pure2-expected-is-as.cpp2:8:19: error: expected primary-expression before ‘int’
pure2-expected-is-as.cpp2:9:10: error: ‘expected’ is not a member of ‘std’; did you mean ‘unexpected’?
pure2-expected-is-as.cpp2:9:30: error: expected primary-expression before ‘,’ token
pure2-expected-is-as.cpp2:9:37: error: expected primary-expression before ‘>’ token
pure2-expected-is-as.cpp2:9:39: error: ‘ex3’ was not declared in this scope; did you mean ‘exp’?
pure2-expected-is-as.cpp2:11:23: error: ‘ex1’ was not declared in this scope; did you mean ‘exp’?
pure2-expected-is-as.cpp2:15:24: error: ‘ex1’ was not declared in this scope; did you mean ‘exp’?
pure2-expected-is-as.cpp2:20:24: error: ‘ex1’ was not declared in this scope; did you mean ‘exp’?
pure2-expected-is-as.cpp2:25:15: error: parse error in template argument list
pure2-expected-is-as.cpp2:25:40: error: ‘ex1’ was not declared in this scope; did you mean ‘exp’?
pure2-expected-is-as.cpp2:30:18: error: ‘ex1’ was not declared in this scope; did you mean ‘exp’?
pure2-expected-is-as.cpp2:34:18: error: ‘ex1’ was not declared in this scope; did you mean ‘exp’?
pure2-expected-is-as.cpp2:39:31: error: ‘ex1’ was not declared in this scope; did you mean ‘exp’?
pure2-expected-is-as.cpp2:42:23: error: ‘ex2’ was not declared in this scope; did you mean ‘exp2’?
pure2-expected-is-as.cpp2:47:24: error: ‘ex2’ was not declared in this scope; did you mean ‘exp2’?
pure2-expected-is-as.cpp2:52:18: error: ‘ex2’ was not declared in this scope; did you mean ‘exp2’?
pure2-expected-is-as.cpp2:57:15: error: parse error in template argument list
pure2-expected-is-as.cpp2:57:40: error: ‘ex2’ was not declared in this scope; did you mean ‘exp2’?
pure2-expected-is-as.cpp2:61:24: error: ‘ex2’ was not declared in this scope; did you mean ‘exp2’?
pure2-expected-is-as.cpp2:65:25: error: parse error in template argument list
pure2-expected-is-as.cpp2:65:51: error: ‘ex2’ was not declared in this scope; did you mean ‘exp2’?
pure2-expected-is-as.cpp2: In function ‘void test_inspect(const auto:89&, const auto:90&)’:
pure2-expected-is-as.cpp2:77:49: error: template argument 1 is invalid
pure2-expected-is-as.cpp2:77:21: error: ‘cpp2::unexp’ has not been declared
pure2-expected-is-as.cpp2: In lambda function:
pure2-expected-is-as.cpp2:78:33: error: ‘unexp’ was not declared in this scope
pure2-expected-is-as.cpp2: In lambda function:
pure2-expected-is-as.cpp2:85:28: error: parse error in template argument list
pure2-expected-is-as.cpp2:85:146: error: parse error in template argument list
In file included from pure2-expected-is-as.cpp:7:
pure2-expected-is-as.cpp2:85:289: error: parse error in template argument list
../../../include/cpp2util.h:270:66: note: in definition of macro ‘CPP2_TYPEOF’
  270 | #define CPP2_TYPEOF(x)              std::remove_cvref_t<decltype(x)>
      |                                                                  ^
pure2-expected-is-as.cpp2:85:403: error: parse error in template argument list
